[gd_scene load_steps=5 format=3 uid="uid://m5qrmb24ua4s"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_gqh75"]
[ext_resource type="Texture2D" uid="uid://b8dpbv4gk4bos" path="res://Assets/1.0.jpg" id="2_6rsvj"]
[ext_resource type="PackedScene" uid="uid://4xrda0swe070" path="res://other/slide_bar_edit.tscn" id="3_qg1t6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7j0mr"]
size = Vector2(48, 48)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gqh75")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
scale = Vector2(0.0239479, 0.0239479)
texture = ExtResource("2_6rsvj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7j0mr")

[node name="editmode" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="editmode"]
custom_minimum_size = Vector2(400, 0)
offset_left = 27.0
offset_top = 20.0
offset_right = 327.0
offset_bottom = 151.0

[node name="Speed" parent="editmode/VBoxContainer" instance=ExtResource("3_qg1t6")]
layout_mode = 2

[node name="Jump Power" parent="editmode/VBoxContainer" instance=ExtResource("3_qg1t6")]
layout_mode = 2
max_value = 4000

[node name="Acceleration" parent="editmode/VBoxContainer" instance=ExtResource("3_qg1t6")]
layout_mode = 2
max_value = 200

[node name="Friction" parent="editmode/VBoxContainer" instance=ExtResource("3_qg1t6")]
layout_mode = 2
max_value = 200

[node name="Gravity" parent="editmode/VBoxContainer" instance=ExtResource("3_qg1t6")]
layout_mode = 2
max_value = 300

[connection signal="on_changed" from="editmode/VBoxContainer/Speed" to="." method="_on_speed_on_changed"]
[connection signal="on_changed" from="editmode/VBoxContainer/Jump Power" to="." method="_on_jump_power_on_changed"]
[connection signal="on_changed" from="editmode/VBoxContainer/Acceleration" to="." method="_on_acceleration_on_changed"]
[connection signal="on_changed" from="editmode/VBoxContainer/Friction" to="." method="_on_friction_on_changed"]
[connection signal="on_changed" from="editmode/VBoxContainer/Gravity" to="." method="_on_gravity_on_changed"]
